2013-01-11  Fred Kiefer  <FredKiefer@gmx.de>

	* Source/win32/w32_general.m (-decodeWM_CLOSEParams:::): Post the
	close event instead of sending it directly to the window.
	Patch by Doug Simons <doug.simons@testplant.com>

2013-01-05 00:54-EST Gregory John Casamento <greg.casamento@gmail.com>
	Merging changes made by Marcian Lytwyn

	* Tools/win32pbs.m: (+ownerByOsPb:) compare against name
	instead of pasteboard object to prevent condition where
	paste works only once as observed on Windows.
	(MainWindowProc) Add code to handle WM_RENDERALLFORMATS as documented
	on MSDN here: http://msdn.microsoft.com/en-us/library/windows/desktop/ms649029(v=vs.85).aspx

2012-12-31  Fred Kiefer  <FredKiefer@gmx.de>

	* Source/cairo/CairoFntInfo.m (-drawGlyphs:..., -setupAttributes):
	Invert the value of matrix[2]. See bug #30493

2012-11-26 12:56-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/cairo/Win32CairoGState.h
	* Source/cairo/Win32CairoGState.m: Add missing files for windows.

2012-11-26 00:37-EST Gregory John Casamento <greg.casamento@gmail.com>

	* ChangeLog
	* config.h.in
	* configure
	* configure.ac
	* Headers/win32/WIN32Server.h
	* Source/cairo/CairoContext.m
	* Source/cairo/CairoGState.m
	* Source/cairo/CairoPDFSurface.m
	* Source/cairo/GNUmakefile
	* Source/cairo/Win32CairoSurface.m
	* Source/GSBackend.m
	* Source/gsc/GSGState.m
	* Source/win32/w32_create.m
	* Source/win32/w32_general.m
	* Source/win32/w32_GLcontext.m
	* Source/win32/w32_movesize.m
	* Source/win32/w32_windowdisplay.m
	* Source/win32/WIN32Server.m
	* Source/winlib/GNUmakefile.preamble: Merge of all testplant
	branch changes to trunk for Cairo changes.  Did code cleanup to
	make the code conform to coding standards.

2012-10-24  Doug Simons <doug.simons@testplant.com>

	* Source/win32/WIN32Server.m : Fix findWindowAt:windowRef:excluding:
	to skip windows with the ignoresMouseEvents property set.

2012-10-14  Fred Kiefer  <FredKiefer@gmx.de>
