@@ -72,17 +72,6 @@
 #  error Invalid server for Cairo backend : non implemented
 #endif /* BUILD_SERVER */
 
-@interface NSBitmapImageRep (GSPrivate)
-- (NSBitmapImageRep *) _convertToFormatBitsPerSample: (int)bps
-                                     samplesPerPixel: (int)spp
-                                            hasAlpha: (BOOL)alpha
-                                            isPlanar: (BOOL)isPlanar
-                                      colorSpaceName: (NSString*)colorSpaceName
-                                        bitmapFormat: (NSBitmapFormat)bitmapFormat 
-                                         bytesPerRow: (int)rowBytes
-                                        bitsPerPixel: (int)pixelBits;
-@end
-
 @implementation CairoContext
 
 + (void) initializeBackend
@@ -164,48 +153,35 @@
 
 @implementation CairoContext (Ops) 
 
-- (void) GSDrawImage: (NSRect)rect: (void *)imageref
+- (BOOL) isCompatibleBitmap: (NSBitmapImageRep*)bitmap
 {
-  NSBitmapImageRep *bitmap;
-  const unsigned char *data[5];
   NSString *colorSpaceName;
 
-  bitmap = (NSBitmapImageRep*)imageref;
-  colorSpaceName = [bitmap colorSpaceName];
-  if ([bitmap isPlanar] || ([bitmap bitmapFormat] != 0) 
-      || ([bitmap bitsPerSample] != 8) ||
-      (![colorSpaceName isEqualToString: NSDeviceRGBColorSpace] &&
-       ![colorSpaceName isEqualToString: NSCalibratedRGBColorSpace]))
+  if ([bitmap bitmapFormat] != 0)
     {
-      int bitsPerSample = 8;
-      BOOL isPlanar = NO;
-      int samplesPerPixel = [bitmap hasAlpha] ? 4 : 3;
-      NSString *colorSpaceName = NSCalibratedRGBColorSpace;
-      NSBitmapImageRep *new;
-
-     new = [bitmap _convertToFormatBitsPerSample: bitsPerSample
-                    samplesPerPixel: samplesPerPixel
-                    hasAlpha: [bitmap hasAlpha]
-                    isPlanar: isPlanar
-                    colorSpaceName: colorSpaceName
-                    bitmapFormat: 0
-                    bytesPerRow: 0
-                    bitsPerPixel: 0];
-            
-      if (new == nil)
-        {
-          NSLog(@"Could not convert bitmap data");
-          return;
-        }
-      bitmap = new;
+      return NO;
     }
 
-  [bitmap getBitmapDataPlanes: (unsigned char **)&data];
-  [self NSDrawBitmap: rect : [bitmap pixelsWide] : [bitmap pixelsHigh]
-        : [bitmap bitsPerSample] : [bitmap samplesPerPixel]
-        : [bitmap bitsPerPixel] : [bitmap bytesPerRow] : [bitmap isPlanar]
-        : [bitmap hasAlpha] :  [bitmap colorSpaceName]
-        : data];
+  if ([bitmap isPlanar])
+    {
+      return NO;
+    }
+
+  if ([bitmap bitsPerSample] != 8)
+    {
+      return NO;
+    }
+
+  colorSpaceName = [bitmap colorSpaceName];
+  if (![colorSpaceName isEqualToString: NSDeviceRGBColorSpace] &&
+      ![colorSpaceName isEqualToString: NSCalibratedRGBColorSpace])
+    {
+      return NO;
+    }
+  else
+    {
+      return YES;
+    }
 }
 
 - (void) GSCurrentDevice: (void **)device : (int *)x : (int *)y
